<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.loicsevillano.topquiz.controller.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="fr.loicsevillano.topquiz.controller.GameActivity"
        android:background="@color/grey">

        <TextView
            android:id="@+id/activity_game_question_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textColor="@color/purple_700"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/question"/>

        <Button
            android:id="@+id/activity_game_answer1_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:text="@string/answer1"
            app:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/activity_game_answer2_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/pink"
            app:backgroundTint="@color/white"
            android:textSize="20sp"
            android:text="@string/answer2"/>

        <Button
            android:id="@+id/activity_game_answer3_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/pink"
            app:backgroundTint="@color/white"
            android:textSize="20sp"
            android:text="@string/answer3"/>

        <Button
            android:id="@+id/activity_game_answer4_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/pink"
            app:backgroundTint="@color/white"
            android:textSize="20sp"
            android:text="@string/answer4"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>